--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -7,12 +7,59 @@
       "name": "Name"
     },
     "signupButton": "Create account",
-    "signinButton": "Sign in"
+    "signinButton": "Sign in",
+    "forgotPasswordButton": "Send link",
+    "forgotPassword": "Forgot password?",
+    "resetPasswordButton": "Save new password",
+    "errors": {
+      "linkNotSent": {
+        "title": "Link not sent",
+        "message": "We are sorry, but we were unable to send you a link to reset your password. Please try again later."
+      },
+      "passwordNotUpdate": {
+        "title": "Password not updated",
+        "message": "We are sorry, but we were unable to update your password. Please try again later."
+      },
+      "invalidCredentials": {
+        "title": "Invalid credentials",
+        "message": "We are sorry, but the credentials you entered are invalid. Please try again."
+      },
+      "signupFailed": {
+        "title": "Could not create account",
+        "message": "We are sorry, but we were unable to create your account. Please try again later."
+      }
+    },
+    "success": {
+      "linkSent": {
+        "title": "Link sent",
+        "message": "We have sent you a link to continue. Please check your inbox."
+      },
+      "verifyEmail": {
+        "title": "Verify your email",
+        "message": "We have sent you a link to verify your email. Please check your inbox."
+      }
+    }
   },
   "signup": {
     "title": "Create an account",
     "message": "We are happy that you want to join us. Please fill in the form below to create your account.",
     "alreadyHaveAccount": "Already have an account?",
     "signIn": "Sign in"
+  },
+  "signin": {
+    "title": "Welcome back",
+    "message": "Please enter your credentials to sign in.",
+    "dontHaveAnAccount": "Don't have an account yet?",
+    "createAnAccount": "Create an account"
+  },
+  "forgotPassword": {
+    "title": "Forgot your password?",
+    "message": "Please enter your email address and we will send you a link to reset your password.",
+    "backToSignin": "Back to signin"
+  },
+  "resetPassword": {
+    "title": "Reset your password",
+    "message": "Enter your new password to update your account.",
+    "backToSignin": "Back to signin"
   }
 }
