fix: small issues

--- a/packages/i18n/translations/de.json
+++ b/packages/i18n/translations/de.json
@@ -64,7 +64,8 @@
 			},
 			"search": "Nach Name oder E-Mail suchen...",
 			"title": "Benutzer verwalten"
-		}
+		},
+		"description": "Verwalte deine Anwendung."
 	},
 	"app": {
 		"menu": {
