--- a/packages/i18n/translations/en.json
+++ b/packages/i18n/translations/en.json
@@ -64,7 +64,8 @@
 			},
 			"search": "Search for name or email...",
 			"title": "Manage users"
-		}
+		},
+		"description": "Manage your application."
 	},
 	"app": {
 		"menu": {
